k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baggsy-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: baggsy-frontend
  template:
    metadata:
      labels:
        app: baggsy-frontend
    spec:
      containers:
      - name: frontend
        image: baggsy-developer/baggsy-frontend:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "0.3"
            memory: "256Mi"
          requests:
            cpu: "0.1"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
