k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baggsy-backend-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: baggsy-backend
