k8s/baggsy-api-service.yml
# k8s/baggsy-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: baggsy-api
spec:
  type: ClusterIP
  selector:
    app: baggsy-api
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
