k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baggsy-frontend-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: baggsy-frontend
