k8s/baggsy-ingress.yaml
# k8s/baggsy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: baggsy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: baggsy.example.com
    http:
      paths:
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: baggsy-api
            port:
              number: 8080
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: baggsy-react
            port:
              number: 80
